2004-03-19  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes bug #54800.

	* em-folder-tree.c (tree_drag_drop): Remove the autoscroll
	timeout.
	(tree_drag_leave): Remove the autoscroll timeout.
	(tree_autoscroll): New autoscroll timeout callback - automagically
	scrolls the treeview if appropriate.
	(tree_drag_motion): Setup the autoscroll timeout.

2004-03-19  Not Zed  <NotZed@Ximian.com>

	* mail-component.c (mail_component_remove_store): ref the store
	before running the async disconnect, otherwise we unref one too
	many times.

2004-03-18  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-account-gui.c (mail_account_gui_setup): Don't set the
	account source/transport types to disabled simply because the
	provider is NULL (think of the "None" option).
	(source_type_changed): Need to update widget sensitivity based on
	locked'ness here.
	(transport_type_changed): Same.

	* em-utils.c (em_utils_add_address): rfc2047 decode the address
	here before passing it off to the addressbook (which expects it to
	be in human-readable form, not encoded). Fixes bug #55591.

2004-03-18  Not Zed  <NotZed@Ximian.com>

	* mail-account-gui.c (mail_account_gui_new): save the source and
	transport vbox's to enable/disable the whole lot easier.
	(mail_account_gui_setup): enable above based on perms.
	(mail_account_gui_build_extra_conf): also disable extra page, as
	above.

	* em-account-prefs.c (account_cursor_change): disable the whole
	account editor if accounts are ro.

2004-03-17  Not Zed  <NotZed@Ximian.com>

	* em-format-html.c (efh_message_deliverystatus): format as plain
	text too.

	* em-format.c (emf_message_deliverystatus): format delivery
	status messages as plain text, rather than as messages.  since
	they wont be CamelMimeMessages.  Maybe they should be silently
	hidden.

	* mail-offline-handler.c (store_go_online): split this, only call
	add_store/note_store once we've actually set the store online.
	(store_went_online): set the store up once we're fully online.