@@ -71,6 +71,7 @@ static const struct {
 	{ N_("Bcc"), EM_FORMAT_HEADER_BOLD },
 	{ N_("Subject"), EM_FORMAT_HEADER_BOLD },
 	{ N_("Date"), EM_FORMAT_HEADER_BOLD },
+	{ N_("Newsgroups"), EM_FORMAT_HEADER_BOLD },
 	{ "x-evolution-mailer", 0 }, /* DO NOT translate */
 };
 
